2008-01-19  Martin Rudalics  <rudalics@gmx.at>

	* progmodes/hideif.el (hide-ifdef-shadow): New option.
	(hide-ifdef-shadow): New face.
	(hide-ifdef-toggle-shadowing): New function to toggle between
	shadowing and making code invisible.
	(hide-ifdef-mode-submap): Add binding for
	hide-ifdef-toggle-shadowing.
	(hide-ifdef-mode-menu): Add entry for
	hide-ifdef-toggle-shadowing.
	(hide-ifdef-region-internal): Give new overlay hide-ifdef
	property.  Shadow text when hide-ifdef-shadow is non-nil.
	(hif-show-ifdef-region): Remove overlays with hide-ifdef
	property set.
	(hif-hide-line): Use when instead of if.
	(hide-ifdef-initially, hide-ifdef-read-only, hide-ifdef-lines):
	Remove unneeded * from doc-strings.

2008-01-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-goto-page): Don't move point any more, now that
	the hscroll behavior was fixed.
	(doc-view-mode): Disable auto-hscroll-mode.

2008-01-18  Tom Tromey  <tromey@redhat.com>

	* vc-svn.el (vc-svn-dir-status): New function.

2008-01-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el: Make vc-status asynchronous.
	(vc-update-vc-status-buffer): New function broken out of ...
	(vc-status-refresh): ... here. Pass vc-update-vc-status-buffer to
	the dir-status backend function.

	* vc-hg.el (vc-hg-dir-status): Compute the status asynchronously.
	Move the output processing to ...
	(vc-hg-after-dir-status): ... here.  Call the function passed as
	an argument with the results.

2008-01-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-pdf/ps->png): Make sure we a have a valid cwd.
	(doc-view-insert-image): Do something if the image is missing.
	(doc-view-mode): Don't use file-remote-p.

2008-01-18  Bastien Guerry  <Bastien.Guerry@ens.fr>

	* textmodes/org-export-latex.el (org-export-latex-cleaned-string): Fix.
	(org-export-latex-special-chars): Convert "..." in \ldots
	and skip tables.
	(org-export-latex-fontify-headline): Change parameter name.